Add -proc:full to batch compiler #2347